[metadata]
name = leuvenmapmatching
version = attr: leuvenmapmatching.__version__
author = Wannes Meert
description = Match a trace of locations to a map
license = Apache 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wannesm/LeuvenMapMatching
project_urls =
    Bug Tracker = https://github.com/wannesm/LeuvenMapMatching/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = map, matching

[options]
python_requires = >=3.6
install_requires =
    numpy
    scipy
setup_requires =
    pytest-runner
tests_requires =
    pytest

[options.extras_require]
vis = smopy; matplotlib>=2.0.0
db = rtree; pyproj
all = smopy; matplotlib>=2.0.0; rtree; pyproj; nvector==0.5.2; gpxpy; pykalman

[aliases]
test=pytest

[tool:pytest]
norecursedirs = .git venv* .eggs
addopts = --verbose
python_files = tests/*.py tests/*/*.py
