[metadata]
name = leuvenmapmatching
version = attr: leuvenmapmatching.__version__
author = Wannes Meert
description = Match a trace of GPS positions to a locations and streets on a map
license = Apache 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wannesm/LeuvenMapMatching
project_urls =
    Bug Tracker = https://github.com/wannesm/LeuvenMapMatching/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = map, matching

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
tests_requires =
    pytest-runner
    pytest

[options.extras_require]
vis = smopy; matplotlib>=2.0.0
db = rtree; pyproj
all = requests; smopy; matplotlib>=2.0.0; rtree; pyproj; nvector==0.5.2; gpxpy; pykalman; pytest; pytest-runner; git+https://github.com/dezhin/osmread

[aliases]
test=pytest

[tool:pytest]
norecursedirs = .git venv* .eggs
addopts = --verbose
python_files = tests/*.py tests/*/*.py
